# RLSubmarine

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: ShaderManager.cpp  ShaderManager.h  cameraManager.h  defines.h  main.c  main.cpp  player.c  player.cpp  player.h
src/shaders/: water.fs
